# TMake

./: .gitignore  CMakeLists.txt  README.md
TConfigFile/: CMakeLists.txt
TLog/: CMakeLists.txt
TMacro/: CMakeLists.txt
TProject/: CMakeLists.txt
TPython/: CMakeLists.txt
Test/: HelloWorld.py
python/: TLoader.py  bootstrap.py
